SignUP and login Setup

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWFqb3Ita2FuZ2Fyb28tNjIuY2xlcmsuYWNjb3VudHMuZGV2JA
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
+CLERK_SECRET_KEY=sk_test_FUlFts8x2BARgQsXfAcHJNObceHrd9OpsaHIJS6sYY
 MONGODB_URI=''
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
